[package]
name = "core_concepts"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.26"
simple_logger = "5.0.0"
futures-util = "0.3.31"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "tracing"] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
reqwest = { version = "0.12.14", features = ["json", "native-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"